# cpuminer

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  curl-config
src/: Makefile.am  cpu-miner.c  miner.h  sha2.c  util.c
tests/: pool.sh  solo.sh  test.bat
